<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Conversor de Temperatura</string>
    <string name="temperature">Temperatura:</string>
    <string name="hint_temperature">Digite temperatura</string>
    <string name="celsiusToF" translatable="false">ºC  —> ºF</string>
    <string name="fahrenheitToC" translatable="false">°F  —> ºC</string>
    <string name="kelvinToC" translatable="false">ºK  —> ºC</string>
    <string name="celsiusToK" translatable="false">°C  —> ºK</string>
    <string name="fahrenheitToK" translatable="false">°F  —> ºK</string>
    <string name="kelvinToF" translatable="false">ºK  —> ºF</string>
    <string name="msgCtoF">Realizada a conversão de Celsius para Fahrenheit.</string>
    <string name="msgCtoK">Realizada a conversão de Celsius para Kelvin.</string>
    <string name="msgFtoC">Realizada a conversão de Fahrenheit para Celsius.</string>
    <string name="msgFtoK">Realizada a conversão de Fahrenheit para Kelvin.</string>
    <string name="msgKtoC">Realizada a conversão de Kelvin para Celsius.</string>
    <string name="msgKtoF">Realizada a conversão de Kelvin para Fahrenheit.</string>
    <string name="error_popup_notify">Não foi possível realizar a conversão de temperatura com os dados informados.</string>
</resources>